--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>MITRAVEL</title>
 </head>
 <body>
-    
+     <div class="site-container">
+         <header class="header">
+             <div class="container header-container flex">
+                 <ul class="header-social social">
+                     <li class="social-item">
+                         <a href="#" class="social-link social-link--fb" aria-label="Go to facebook"></a>
+                        </li>
+                     <li class="social-item">
+                         <a href="#" class="social-link social-link--tw" aria-label="Go to twitter"></a>
+                        </li>
+                 </ul>
+                 <a href="#" class="header-logo logo">MITRAVEL</a>
+                 <button class="header-burger burger btn-reset">
+                     <span class="burger-line"></span>
+                     <span class="burger-line"></span>
+                 </button>
+             </div>
+         </header>
+         <main class="main">
+             <section class="first">
+                 sfsf
+             </section>
+         </main>
+     </div>
 </body>
 </html>
