Сделал первый блок с поиском

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +8,63 @@
     <link rel="stylesheet" href="css/style.css">
     <title>MITRAVEL</title>
 </head>
+
 <body>
-     <div class="site-container">
-         <header class="header">
-             <div class="container header-container flex">
-                 <ul class="header-social social">
-                     <li class="social-item">
-                         <a href="#" class="social-link social-link--fb" aria-label="Go to facebook"></a>
-                        </li>
-                     <li class="social-item">
-                         <a href="#" class="social-link social-link--tw" aria-label="Go to twitter"></a>
-                        </li>
-                 </ul>
-                 <a href="#" class="header-logo logo">MITRAVEL</a>
-                 <button class="header-burger burger btn-reset">
-                     <span class="burger-line"></span>
-                     <span class="burger-line"></span>
-                 </button>
-             </div>
-         </header>
-         <main class="main">
-             <section class="first">
-                 sfsf
-             </section>
-         </main>
-     </div>
+    <div class="site-container">
+        <header class="header">
+            <div class="container header-container flex">
+                <ul class="header-social social">
+                    <li class="social-item">
+                        <a href="#" class="social-link social-link--fb" aria-label="Go to facebook"></a>
+                    </li>
+                    <li class="social-item">
+                        <a href="#" class="social-link social-link--tw" aria-label="Go to twitter"></a>
+                    </li>
+                </ul>
+                <a href="#" class="header-logo logo">MITRAVEL</a>
+                <button class="header-burger burger btn-reset">
+                    <span class="burger-line"></span>
+                    <span class="burger-line"></span>
+                </button>
+            </div>
+        </header>
+        <main class="main">
+            <section class="first">
+                <div class="container first-container">
+                    <a href="#" class="first-link">New book</a>
+                    <h1 class="first-title">Mother Earth Hosts Our Travels</h1>
+                    <p class="first-descr">There are not many cities that have experienced such social and political
+                        extremes in recent history as Amsterdam. In the 20th century alone, Amsterdam faced the
+                        atrocities of war for the first time in 400 years, became the radical center of 1960s social
+                        movements and witnessed a complete </p>
+                    <button class="first-btn btn-reset">Buy The Book</button>
+                    <div class="first-bottom">
+                        <form action="/" class="first-form search-form">
+                            <input type="search" class="search-form-field" placeholder="Search stories">
+                            <button type="submit" class="search-form-button btn-reset"
+                                aria-label="Search stories"></button>
+                        </form>
+                        <div class="first-slider main-slider">
+                            <div class="swiper-container">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <div class="main-slider-media">
+                                            <img src="img/fon-slid.jpg" alt="moutain">
+                                        </div>
+                                        <p class="main-slider-text">wonderful moutain</p>
+                                    </div>
+
+                                    <div class="swiper-slide"></div>
+                                    <div class="swiper-slide"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+        </main>
+    </div>
 </body>
+
 </html>
