Сделал второй блок

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="site-container">
+    < class="site-container">
         <header class="header">
             <div class="container header-container flex">
                 <ul class="header-social social">
@@ -28,6 +28,8 @@
                 </button>
             </div>
         </header>
+    
+
         <main class="main">
             <section class="first">
                 <div class="container first-container">
@@ -37,7 +39,7 @@
                         extremes in recent history as Amsterdam. In the 20th century alone, Amsterdam faced the
                         atrocities of war for the first time in 400 years, became the radical center of 1960s social
                         movements and witnessed a complete </p>
-                    <button class="first-btn btn-reset">Buy The Book</button>
+                    <button class="first-btn btn-reset btn">Buy The Book</button>
                     <div class="first-bottom">
                         <form action="/" class="first-form search-form">
                             <input type="search" class="search-form-field" placeholder="Search stories">
@@ -63,8 +65,49 @@
                 </div>
 
             </section>
+
+            <section class="become">
+                <div class="container">
+                    <h2 class="section-title become-title">Become A Travel Pro In One Easy Lesson</h2>
+                    <ul class="become-list">
+                        <li class="become-item">
+                            <img src="/img/im1.jpg" alt="travel image" class="become-image">
+                            <div class="become-text">Vacation Home <br> Rental Success</div>
+                        </li>
+                        <li class="become-item">
+                            <img src="/img/im2.jpg" alt="travel image" class="become-image">
+                            <div class="become-text">Vacation Home <br> Rental Success</div>
+                        </li>
+                        <li class="become-item">
+                            <img src="/img/im3.jpg" alt="travel image" class="become-image">
+                            <div class="become-text">Vacation Home <br> Rental Success</div>
+                        </li>
+                        <li class="become-item">
+                            <img src="/img/im4.jpg" alt="travel image" class="become-image">
+                            <div class="become-text">Vacation Home <br> Rental Success</div>
+                        </li>
+                    </ul>
+
+                </div>
+            </section>
+
+            <section class="featured">
+                <div class="container featured-container">
+                    <article class="featured-article blog-article">
+                       <a href="#" class="blog-article-category">Featured</a>
+                       <h3 class="blog-article-title">How To Fly A Private Jet On Your Next Trip</h3>
+                       <p class="blog-article-descr">The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.</p>
+                        <a href="#" class="blog-article-link btn">Read Article</Article></a>
+                    </article>
+
+                </div>
+
+                <div class="featured-stories">
+                    sdfsfdsfsfsfs
+                </div>
+            </section>
         </main>
-    </div>
+    
 </body>
 
 </html>
