--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                         <div class="first-slider main-slider">
                             <div class="swiper-container">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide">
-                                        <div class="main-slider-media">
+                                    <div class="swiper-slide slide-top">
+                                        <div class="main-slider-media ">
                                             <img src="img/fon-slid.jpg" alt="moutain">
                                         </div>
                                         <p class="main-slider-text">wonderful moutain</p>
@@ -169,10 +169,19 @@
                 </div>
                 <div class="slider-container">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">1</div>
-                        <div class="swiper-slide">2</div>
-                        <div class="swiper-slide">3</div>
-                        <div class="swiper-slide">4</div>
+                        <div class="swiper-slide slide-1">
+                            <button class="btn-reset slide-play"></button>
+                            <h3 class="slider-title">A Guide To Rocky Mountain Vacations</h3>
+                        </div> 
+                        <div class="swiper-slide slide-2"> 
+                            <button class="btn-reset slide-play"></button>
+                            <h3 class="slider-title">A Guide To Rocky Mountain Vacations</h3>
+                        </div>
+                        <div class="swiper-slide slide-3">
+                            <button class="btn-reset slide-play"></button>
+                            <h3 class="slider-title">A Guide To Rocky Mountain Vacations</h3>
+                        </div>
+                        
                     </div>
                 </div>
             </section>
