сделал основную часть страницы

--- a/index.html
+++ b/index.html
@@ -185,7 +185,206 @@
                     </div>
                 </div>
             </section>
+            <section class="newsletter">
+                <div class="container">
+                    <div class="newsletter-content">
+                        <div class="newsletter-text">
+                            <h2 class="newsletter-title section-title">Sign Up Our Newsletter</h2>
+                            <p class="newsletter-descr">The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National
+                            Park ranks as three of the most magnificent.</p>
+                        </div>
+                       <form action="" class="newsletter-form subscribe-form">
+                           <input type="text" name="name" placeholder="Name" class="subscribe-form-fild">
+                           <input type="email" name="email" placeholder="Email" class="subscribe-form-fild">
+                           <input type="tel" name="tel" placeholder="Phone Number" class="subscribe-form-fild">
+                           <button class="btn btn-reset subscribe-form-btn btnsh ">Sign Up Now</button>
+                       </form>
+                    </div>
+                </div>
+            </section>
+            <section class="insp">
+                <div class="container">
+                    <h2 class="section-title section-title-center insp-heading">Inspiration</h2>
+                    <div class="insp-descr">The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National 
+                        Park ranks as three of the most magnificent & awe inspiring.
+                    </div>
+                    <ul class="grid insp-list">
+                        <li class="insp-item insp-item-big insp-item-1">
+                            <div class="insp-text">
+                                <a href="#" class="insp-category">Destinations</a>
+                                <h3 class="insp-title">
+                                    <a href="">A Guide To Rocky Mountain Vacations</a>
+                                </h3>
+                                <ul class="insp-people">
+                                    <li class="insp-people-item">
+                                        <img src="img/2-1.jpg" alt="human-1">
+                                    </li>
+                                    <li class="insp-people-item">
+                                        <img src="img/2-2.jpg" alt="human-2">
+                                    </li>
+                                    <li class="insp-people-item">
+                                        <img src="img/2-1.jpg" alt="human-2">
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="insp-item insp-item-2">
+                            <button class="btn-reset insp-play" aria-label="Play-Video"></button>
+                            <div class="insp-text">
+                                <a href="#" class="insp-category">Destinations</a>
+                                <h3 class="insp-title">
+                                    <a href="">Travaling To Barcelona</a>
+                                </h3>
+                                <ul class="insp-people">
+                                    <li class="insp-people-item">
+                                        <img src="img/2-1.jpg" alt="human-1">
+                                    </li>
+                                    <li class="insp-people-item">
+                                        <img src="img/2-2.jpg" alt="human-2">
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="insp-item insp-item-bigheight insp-item-3">
+                            <div class="insp-text">
+                                <a href="#" class="insp-category">Destinations</a>
+                                <h3 class="insp-title">
+                                    <a href="">Party Jokes Startling But Unnecessary</a>
+                                </h3>
+                                <ul class="insp-people">
+                                    <li class="insp-people-item">
+                                        <img src="img/2-1.jpg" alt="human-1">
+                                    </li>
+                                    <li class="insp-people-item">
+                                        <img src="img/2-2.jpg" alt="human-2">
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="insp-item insp-item-bigheight insp-item-4">
+                            <div class="insp-text">
+                                <a href="#" class="insp-category">Destinations</a>
+                                <h3 class="insp-title">
+                                    <a href="">Maui By Air The Best Way Around The Island</a>
+                                </h3>
+                                <ul class="insp-people">
+                                    <li class="insp-people-item">
+                                        <img src="img/2-1.jpg" alt="human-1">
+                                    </li>
+                                    <li class="insp-people-item">
+                                        <img src="img/2-2.jpg" alt="human-2">
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="insp-item insp-item-bigheight insp-item-5">
+                            <div class="insp-text">
+                                <a href="#" class="insp-category">Destinations</a>
+                                <h3 class="insp-title">
+                                    <a href="">Travaling To Barcelona</a>
+                                </h3>
+                                <ul class="insp-people">
+                                    <li class="insp-people-item">
+                                        <img src="img/2-1.jpg" alt="human-1">
+                                    </li>
+                                    <li class="insp-people-item">
+                                        <img src="img/2-2.jpg" alt="human-2">
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="insp-item insp-item-6">
+                            <button class="btn-reset insp-play" aria-label="Play-Video"></button>
+                            <div class="insp-text">
+                                <a href="#" class="insp-category">Destinations</a>
+                                <h3 class="insp-title">
+                                    <a href="">Travaling To Barcelona</a>
+                                </h3>
+                                <ul class="insp-people">
+                                    <li class="insp-people-item">
+                                        <img src="img/2-1.jpg" alt="human-1">
+                                    </li>
+                                    <li class="insp-people-item">
+                                        <img src="img/2-2.jpg" alt="human-2">
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="insp-item insp-item-big insp-item-7">
+                            <div class="insp-text">
+                                <a href="#" class="insp-category">Destinations</a>
+                                <h3 class="insp-title">
+                                    <a href="">A Guide To Rocky Mountain Vacations</a>
+                                </h3>
+                                <ul class="insp-people">
+                                    <li class="insp-people-item">
+                                        <img src="img/2-1.jpg" alt="human-1">
+                                    </li>
+                                    <li class="insp-people-item">
+                                        <img src="img/2-2.jpg" alt="human-2">
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
         </main>
+
+        <footer class="footer">
+            <div class="container footer-container flex">
+                <nav class="footer-column">
+                    <h2 class="footer-title">Company</h2>
+                    <ul class="footer-list">
+                        <li class="footer-item"><a href="#" class="footer-link">About</a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">Press</a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">Blog</a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">Careers </a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">Security</a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">Driver Centre</a></li>
+                    </ul>
+                </nav>
+                <nav class="footer-column">
+                    <h2 class="footer-title">Information</h2>
+                    <ul class="footer-list">
+                        <li class="footer-item"><a href="#" class="footer-link"> Our Story</a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">Recipes</a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">Nutrition</a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">Resources </a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">Newsletter</a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">Contact</a></li>
+                    </ul>  
+                </nav>
+                <nav class="footer-column">
+                    <h2 class="footer-title">Information</h2>
+                    <ul class="footer-list">
+                        <li class="footer-item"><a href="#" class="footer-link">Customer service</a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">Recommend a restaurant</a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">Signup a restaurant</a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">Jobs </a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">Press</a></li>
+                        <li class="footer-item"><a href="#" class="footer-link">Terms of use</a></li>
+                    </ul>
+                </nav>
+                <div class="footer-column">
+                    <h2 class="footer-title">Subscribe Now</h2>
+                    <form action="" class="subs-form">
+                        <input type="email" name="email" class="subs-form-fild" placeholder="Your Email">
+                        <button class="btn-reset btn subs-form-btn">Subscribe Now</button>
+                    </form>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <div class="container bottom-container flex">
+                    <small class="footer-copy">© 2019 Mass Impressions. Designed by Tran Mau Tri Tam for Mass Impressions. All rights reserved.</small>
+                    <ul class="footer-links">
+                        <li class="footer-links-item"><a href="#" class="footer-link">Terms of Service</a></li>
+                        <li class="footer-links-item"><a href="#" class="footer-link">Privacy Policy</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
         <script src="libs/swiper.min.js"></script>
         <script src="js/main.js"></script>
     
