--- a/index.html
+++ b/index.html
@@ -106,19 +106,19 @@
                     <h2 class="section-title become-title">Become A Travel Pro In One Easy Lesson</h2>
                     <ul class="become-list">
                         <li class="become-item">
-                            <img src="/img/im1.jpg" alt="travel image" class="become-image">
+                            <img src="img/im1.jpg" alt="travel image" class="become-image">
                             <div class="become-text">Vacation Home <br> Rental Success</div>
                         </li>
                         <li class="become-item">
-                            <img src="/img/im2.jpg" alt="travel image" class="become-image">
+                            <img src="img/im2.jpg" alt="travel image" class="become-image">
                             <div class="become-text">Vacation Home <br> Rental Success</div>
                         </li>
                         <li class="become-item">
-                            <img src="/img/im3.jpg" alt="travel image" class="become-image">
+                            <img src="img/im3.jpg" alt="travel image" class="become-image">
                             <div class="become-text">Vacation Home <br> Rental Success</div>
                         </li>
                         <li class="become-item">
-                            <img src="/img/im4.jpg" alt="travel image" class="become-image">
+                            <img src="img/im4.jpg" alt="travel image" class="become-image">
                             <div class="become-text">Vacation Home <br> Rental Success</div>
                         </li>
                     </ul>
